# logbook-cpp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Logbook.workspace  Makefile  install_manifest.txt  logbook.kdev4
.codelite/: Logbook-alexander.tags-shm  Logbook-alexander.tags-wal  Logbook.session  cppcheck.list
Testing/Temporary/: CTestCostData.txt
logbook/: logbook.cbp
public/: Index.html
public/assets/js/: main.js
src/: CMakeLists.txt  LogbookConfig.h  LogbookConfig.h.in  Makefile  logbook  logbook.cbp  logbookserver.cpp  logbookserver.hpp  main.cpp
src/books/: CMakeLists.txt  Makefile  message.cpp  ostreamwriter.cpp  ostreamwriter.h  websocket.cpp  websocket.hpp
src/books/websocket/: message.hpp
src/bridge/: CMakeLists.txt  Makefile  bookshelf.cpp  bridge.hpp  captainsdesk.cpp  message.cpp  message.hpp  output.txt  portauthority.cpp  portauthority.hpp  shipNames.inc
src/crows_nest/: CMakeLists.txt  Makefile  udplistener.cpp  udplistener.hpp
test/: CMakeLists.txt  Makefile  logbook_tests.cbp  message_test
test/src/: bookshelf_test.cpp  captainsdesk_test.cpp  message_test.cpp  mocks.h  ostreamwriter_test.cpp  portauthority_test.cpp
